[package]
name = "rustygb-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rustygb = { git = "https://github.com/sonhs99/rustygb" }
# rustygb = { path = "./lib" }

# [dependencies.web-sys]
# version = "0.3"
# features = [
#     "Worker",
#     "Attr",
#     "CanvasRenderingContext2d",
#     "ImageData",
#     "Document",
#     "Element",
#     "Event",
#     "EventTarget",
#     "HtmlCanvasElement",
#     "HtmlElement",
#     "HtmlInputElement",
#     "Node",
#     "Text",
#     "Window",
# ]
